--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^10.0.6",
     "reactstrap": "8.8.1",
     "sass": "1.53.0",
