Draft laporan penjualan Admin

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "chartist": "^0.11.4",
     "chartist-plugin-tooltips": "^0.0.17",
     "csv-parser": "^3.0.0",
+    "file-saver": "^2.0.5",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "jspdf": "^3.0.3",
@@ -37,7 +38,8 @@
     "react-toastify": "^10.0.6",
     "reactstrap": "8.8.1",
     "sass": "1.53.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "xlsx": "^0.18.5"
   },
   "optionalDependencies": {
     "jquery": "3.5.1",
