--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-toastify": "^10.0.6",
     "reactstrap": "8.8.1",
     "sass": "1.53.0",
+    "sheetjs-style": "^0.15.8",
     "socket.io-client": "^4.8.1",
     "xlsx": "^0.18.5"
   },
