Update format dokumen & testing

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,25 +4,36 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "ajv": "^8.16.0",
+    "array-move": "^4.0.0",
+    "array-move-item": "^1.0.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bootstrap": "^4.6.0",
+    "cdbreact": "^1.5.19",
     "chart.js": "^3.9.1",
     "chartist": "^0.11.4",
     "chartist-plugin-tooltips": "^0.0.17",
+    "convert-base64-to-image": "^0.0.16",
     "csv-parser": "^3.0.0",
     "file-saver": "^2.0.5",
+    "file-server": "^2.2.1",
+    "fs": "^0.0.1-security",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
-    "jspdf": "^3.0.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "mdb-react-ui-kit": "^9.0.0",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
+    "pdf-lib": "^1.17.1",
     "react": ">=16.8.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-calendar": "^5.1.0",
     "react-chartist": "^0.14.4",
     "react-chartjs-2": "^3.3.0",
+    "react-color": "^2.19.3",
     "react-dom": ">=16.8.0",
     "react-form-stepper": "^2.0.3",
     "react-icons": "^5.3.0",
@@ -31,16 +42,19 @@
     "react-notification-alert": "^0.0.13",
     "react-password-checklist": "^1.8.1",
     "react-pdf": "^9.2.1",
+    "react-pro-sidebar": "^1.1.0",
+    "react-rnd": "^10.5.2",
     "react-router": "5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
+    "react-signature-canvas": "^1.1.0-alpha.2",
+    "react-sortable-hoc": "^2.0.0",
     "react-toastify": "^10.0.6",
     "reactstrap": "8.8.1",
     "sass": "1.53.0",
     "sheetjs-style": "^0.15.8",
-    "socket.io-client": "^4.8.1",
-    "xlsx": "^0.18.5"
+    "socket.io-client": "^4.8.1"
   },
   "optionalDependencies": {
     "jquery": "3.5.1",
